--- a/Partie 5 - Les évènements et la manipulation du DOM/Exercice_2/Index.html
+++ b/Partie 5 - Les évènements et la manipulation du DOM/Exercice_2/Index.html
@@ -24,11 +24,11 @@
         <div class="card w-25">
             <div class="card-body">
                 <form>
-                    <div class="form-group font-weight-bold">
+                    <div class="form-group">
                         <label for="Password">Merci d'indiquer votre mot de passe.</label>
                         <input type="text" class="form-control" id="password" placeholder="Mot de passe">
                     </div>
-                    <div class="form-group font-weight-bold">
+                    <div class="form-group">
                         <label for="Password_confirmation">Merci de confirmer votre mot de passe.</label>
                         <input type="text" class="form-control" id="password_confirmation"
                             placeholder="Confirmation du mot de passe">
