Partie 5 - Exercice 3 non OK.

--- a/Partie 5 - Les évènements et la manipulation du DOM/Exercice_3/Index.html
+++ b/Partie 5 - Les évènements et la manipulation du DOM/Exercice_3/Index.html
@@ -14,12 +14,16 @@
     <link rel="stylesheet" href="Assets/CSS/style.css">
 
     <!-- Attention penser à mettre le bootstrap.css avant le style.css. -->
-    <title>Partie 5 - Les évènements et la manipulation du DOM - Exercice 4</title>
+    <title>Partie 5 - Les évènements et la manipulation du DOM - Exercice 3</title>
+    <style>
+        .danger {
+            font-weight: 500;
+            color: red;
+        }
+    </style>
 </head>
 
 <body>
-
-
     <div class="d-flex h-100 justify-content-center align-items-center">
         <div class="card w-25">
             <div class="card-body">
@@ -39,7 +43,7 @@
                             placeholder="33">
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button onclick="myFunction()" type="button" class="btn btn-info">Valider</button>
+                        <button type="button" class="btn btn-info">Valider</button>
                     </div>
                 </form>
             </div>
