--- a/Partie 5 - Les évènements et la manipulation du DOM/Exercice_4/Index.html
+++ b/Partie 5 - Les évènements et la manipulation du DOM/Exercice_4/Index.html
@@ -14,36 +14,14 @@
     <link rel="stylesheet" href="Assets/CSS/style.css">
 
     <!-- Attention penser à mettre le bootstrap.css avant le style.css. -->
-    <title>Partie 5 - Les évènements et la manipulation du DOM - Exercice 3</title>
+    <title>Partie 5 - Les évènements et la manipulation du DOM - Exercice 4</title>
 </head>
 
 <body>
 
-
-    <div class="d-flex h-100 justify-content-center align-items-center">
-        <div class="card w-25">
-            <div class="card-body">
-                <form>
-                    <div class="form-group font-weight-bold">
-                        <label for="name">Merci d'indiquer votre nom.</label>
-                        <input type="text" class="form-control" id="name" placeholder="Dupont">
-                    </div>
-                    <div class="form-group font-weight-bold">
-                        <label for="email">Merci de communiquer votre email.</label>
-                        <input type="text" class="form-control" id="email"
-                            placeholder="jean.dupont@gmail.fr">
-                    </div>
-                    <div class="form-group font-weight-bold">
-                        <label for="age">Merci d'indiquer votre âge.</label>
-                        <input type="text" class="form-control" id="age"
-                            placeholder="33">
-                    </div>
-                    <div class="d-flex justify-content-center">
-                        <button onclick="myFunction()" type="button" class="btn btn-info">Valider</button>
-                    </div>
-                </form>
-            </div>
-        </div>
+    <h1>Jeu de l'Ampoule</h1>
+    <div class="container">
+        <img src="https://www.w3schools.com/js/pic_bulboff.gif" alt="Ampoule éteinte">
     </div>
 
 
@@ -54,3 +32,6 @@
 </body>
 
 </html>
+
+
+
