Partie 6 - Exercice 1 finalisé.

--- a/Partie 6 - Les boucles/Exercice_1/Index.html
+++ b/Partie 6 - Les boucles/Exercice_1/Index.html
@@ -19,17 +19,14 @@
 
 <body>
 
-        <h1>Années</h1>
-        <table>
-            <thead>
-                <th>Année</th>
-            </thead>
-            <tbody>
-                
-            </tbody>
-        </table>
-
-    
+    <h1>Années bissextiles sur la période 2020-2030.</h1>
+    <table>
+        <thead>
+            <th>Années</th>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
 
     <!-- Javascript Bootstrap Libraries -->
     <script src="Assets/Libraries/JS/jquery-3.4.1.min.js"></script>
