--- a/Partie 6 - Les boucles/Exercice_3/index.html
+++ b/Partie 6 - Les boucles/Exercice_3/index.html
@@ -3,6 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <title>Exercice 3</title>
+    <style>
+      body {
+        height: 100vh;
+        display: flex;
+        color: MidnightBlue;
+        font-weight: bold;
+        font-size: 40px;
+        justify-content: center;
+        align-items: center;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        text-transform: uppercase;
+      }
+    </style>
   </head>
   <body>
 <script src="assets/js/script.js" charset="utf-8"></script>
