Partie 6 - Exercice 5 non OK.

--- a/Partie 6 - Les boucles/Exercice_4/index.html
+++ b/Partie 6 - Les boucles/Exercice_4/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Exercice 4</title>
     <style>
-      p {
+      body {
         text-align: center;
         color: CadetBlue;
         text-transform: uppercase;
