--- a/Partie 7 - Les fonctions/Exercice_1/Index.html
+++ b/Partie 7 - Les fonctions/Exercice_1/Index.html
@@ -19,26 +19,28 @@
 
 <body>
 
-    <div class="card text-white bg-dark mb-3 d-inline-block" style="max-width: 20rem;">
-        <div class="card-header font-weight-bold h3 bg-white text-dark">CALCULATRICE</div>
-        <div class="card-body">
-            <h4 class="card-title">Multiplication</h4>
-            <p class="card-text">
-                <form>
-                    <div class="form-group">
-                        <label for="input_1">Premier facteur</label>
-                        <input type="text" class="form-control" id="input_1" placeholder="3">
-                    </div>
-                    <div class="form-group">
-                        <label for="input_2">Deuxième facteur</label>
-                        <input type="text" class="form-control" id="input_2" placeholder="4">
-                    </div>
-                    <button type="button" class="btn btn-primary btn-lg font-weight-bold">Produit</button>
-                    <div class="form-group">
-                        <input type="text" class="form-control mt-3" id="product" placeholder="12">
-                    </div>
-                </form>
-            </p>
+    <div class="d-flex h-100 justify-content-center align-items-center">
+        <div class="card text-white bg-dark mb-3 d-inline-block" style="max-width: 20rem;">
+            <div class="card-header font-weight-bold h3 bg-white text-dark">CALCULATRICE</div>
+            <div class="card-body">
+                <h4 class="card-title text-center">Multiplication</h4>
+                <p class="card-text">
+                    <form>
+                        <div class="form-group mt-4 pt-2">
+                            <label for="input_1">Premier facteur</label>
+                            <input type="text" class="form-control" id="input_1" placeholder="3">
+                        </div>
+                        <div class="form-group mb-4 pb-2">
+                            <label for="input_2">Deuxième facteur</label>
+                            <input type="text" class="form-control" id="input_2" placeholder="4">
+                        </div>
+                        <button type="button" class="btn btn-primary btn-lg btn-block font-weight-bold">Produit</button>
+                        <div class="form-group">
+                            <input type="text" class="form-control mt-3" id="product" placeholder="12">
+                        </div>
+                    </form>
+                </p>
+            </div>
         </div>
     </div>
 
