--- a/Partie 7 - Les fonctions/Exercice_4/index.html
+++ b/Partie 7 - Les fonctions/Exercice_4/index.html
@@ -2,10 +2,11 @@
 <html lang="fr" dir="ltr">
 <head>
   <meta charset="utf-8" />
-  <title>Exercice 2</title>
+  <title>Exercice 4</title>
   <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 <body>
   <img src="assets/img/la-nuit-etoilee.jpg" alt="La nuit étoilée - V. VAN GOGH" />
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
