--- a/Partie 7 - Les fonctions/Exercice_1/Index.html
+++ b/Partie 7 - Les fonctions/Exercice_1/Index.html
@@ -24,22 +24,18 @@
             <div class="card-header font-weight-bold h3 bg-white text-dark">CALCULATRICE</div>
             <div class="card-body">
                 <h4 class="card-title text-center">Multiplication</h4>
-                <p class="card-text">
-                    <form>
-                        <div class="form-group mt-4 pt-2">
-                            <label for="input_1">Premier facteur</label>
-                            <input type="text" class="form-control" id="input_1" placeholder="3">
-                        </div>
-                        <div class="form-group mb-4 pb-2">
-                            <label for="input_2">Deuxième facteur</label>
-                            <input type="text" class="form-control" id="input_2" placeholder="4">
-                        </div>
-                        <button type="button" class="btn btn-primary btn-lg btn-block font-weight-bold">Produit</button>
-                        <div class="form-group">
-                            <input type="text" class="form-control mt-3" id="product" placeholder="12">
-                        </div>
-                    </form>
-                </p>
+                <form>
+                    <div class="form-group mt-4 pt-2">
+                        <label for="input_1">Premier facteur</label>
+                        <input type="text" class="form-control" id="input_1" placeholder="3">
+                    </div>
+                    <div class="form-group mb-4 pb-2">
+                        <label for="input_2">Deuxième facteur</label>
+                        <input type="text" class="form-control" id="input_2" placeholder="4">
+                    </div>
+                    <button type="button" id="result" class="btn btn-primary btn-lg btn-block font-weight-bold">Produit</button>
+                    <p class="text-center mt-3 h3" id="label">0</p>
+                </form>
             </div>
         </div>
     </div>
