Partie 7 - Exercice 1 finalisé.

--- a/Partie 7 - Les fonctions/Exercice_3/Index.html
+++ b/Partie 7 - Les fonctions/Exercice_3/Index.html
@@ -33,8 +33,7 @@
                         <label for="input_2">Deuxième facteur</label>
                         <input type="text" class="form-control" id="input_2" placeholder="4">
                     </div>
-                    <button type="button" id="result"
-                        class="btn btn-primary btn-lg btn-block font-weight-bold">Produit</button>
+                    <button type="button" id="result" class="btn btn-primary btn-lg btn-block font-weight-bold">Produit</button>
                     <p class="text-center mt-3 h3" id="label">0</p>
                 </form>
             </div>
