Partie 7 - Exercice 8 finalisé et ajout du zip de la Partie 7.

--- a/Partie 7 - Les fonctions/Exercice_8/Index.html
+++ b/Partie 7 - Les fonctions/Exercice_8/Index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-<!DOCTYPE html>
-<html lang="fr">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fonction en js</title>
+    <title>Fonctions en js</title>
     <link href="https://fonts.googleapis.com/css2?family=Spartan:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <style>
@@ -58,16 +55,8 @@
         </div>
     </div>
 
-    <script src="main.js"></script>
-</body>
-
-</html>
-
-<!-- Javascript Bootstrap Libraries -->
-<script src="Assets/Libraries/JS/jquery-3.4.1.min.js"></script>
-<script src="Assets/Libraries/JS/bootstrap.bundle.min.js"></script>
-<script src="Assets/JS/script.js"></script>
-
+    <script src="Assets/JS/script.js"></script>
+    
 </body>
 
 </html>
