Partie 9 - Exercice 1 finalisé.

--- a/Partie 9 - Les librairies/Exercice_1/Index.html
+++ b/Partie 9 - Les librairies/Exercice_1/Index.html
@@ -21,7 +21,8 @@
 
     <div class="d-flex h-100 justify-content-center align-items-center">
         <div class="card text-white bg-secondary mb-3 d-inline-block" style="max-width: 50rem;">
-            <div class="card-header font-weight-bold h3 bg-white text-dark text-uppercase text-center p-4">Formulaire de paiement
+            <div class="card-header font-weight-bold h3 bg-white text-dark text-uppercase text-center p-4">Formulaire de
+                paiement
             </div>
             <div class="card-body">
                 <form>
@@ -49,6 +50,8 @@
                     <i class="fab fa-cc-mastercard"></i>
                     <i class="fab fa-cc-amex"></i>
                 </form>
+                <button type="button"
+                    class="h4 btn btn-primary btn-lg btn-block text-uppercase font-weight-bold">Valider</button>
             </div>
         </div>
     </div>
@@ -57,6 +60,7 @@
     <script src="Assets/Libraries/JS/jquery-3.4.1.min.js"></script>
     <script src="Assets/Libraries/JS/bootstrap.bundle.min.js"></script>
     <script src="Assets/JS/cleave.js"></script>
+    <script src="Assets/JS/cleave-phone.fr.js"></script>
     <script src="Assets/JS/script.js"></script>
 
 </body>
