Partie 9 - Exercice 2 finalisé.

--- a/Partie 9 - Les librairies/Exercice_2/index.html
+++ b/Partie 9 - Les librairies/Exercice_2/index.html
@@ -9,37 +9,37 @@
 
 <body>
     <h1>Le vampire</h1>
-    <p><span data-inline-tweet>
+    <p><span data-inline-tweet data-inline-tweet-via="hln871" data-inline-tweet-tags="coeur, couteau, démons">
             Toi qui, comme un coup de couteau,<br />
             Dans mon coeur plaintif es entrée ;<br />
             Toi qui, forte comme un troupeau<br />
             De démons, vins, folle et parée,
         </span></p>
-    <p><span data-inline-tweet>
+    <p><span data-inline-tweet data-inline-tweet-via="hln871" data-inline-tweet-tags="esprit, lit, chaîne">
             De mon esprit humilié<br />
             Faire ton lit et ton domaine ;<br />
             - Infâme à qui je suis lié<br />
             Comme le forçat à la chaîne,
         </span></p>
-    <p><span data-inline-tweet>
+    <p><span data-inline-tweet data-inline-tweet-via="hln871" data-inline-tweet-tags="joueur, bouteille, vermines">
             Comme au jeu le joueur têtu,<br />
             Comme à la bouteille l'ivrogne,<br />
             Comme aux vermines la charogne,<br />
             - Maudite, maudite sois-tu !
         </span></p>
-    <p><span data-inline-tweet>
+    <p><span data-inline-tweet data-inline-tweet-via="hln871" data-inline-tweet-tags="glaive, liberté, poison">
             J'ai prié le glaive rapide<br />
             De conquérir ma liberté,<br />
             Et j'ai dit au poison perfide<br />
             De secourir ma lâcheté.
         </span></p>
-    <p><span data-inline-tweet>
+    <p><span data-inline-tweet data-inline-tweet-via="hln871" data-inline-tweet-tags="poison, glaive, esclavage">
             Hélas ! le poison et le glaive<br />
             M'ont pris en dédain et m'ont dit :<br />
             " Tu n'es pas digne qu'on t'enlève<br />
             A ton esclavage maudit,
         </span></p>
-    <p><span data-inline-tweet>
+    <p><span data-inline-tweet data-inline-tweet-via="hln871" data-inline-tweet-tags="empire, baisers, cadavre">
             Imbécile ! - de son empire<br />
             Si nos efforts te délivraient,<br />
             Tes baisers ressusciteraient<br />
