Partie 11 - Exercices supplémentaires - Paragraphes cliqués, moyennes de notes, nombres pairs & impairs
Paragraphes cliqués, moyennes de notes, nombres pairs & impairs

--- a/Partie 11 - Exercices supplémentaires/Paragraphes cliqués, moyennes de notes, nombres pairs & impairs/Index.html
+++ b/Partie 11 - Exercices supplémentaires/Paragraphes cliqués, moyennes de notes, nombres pairs & impairs/Index.html
@@ -6,8 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Chiffre multiple</title>
-    
+    <title>Paragraphes cliqués, moyennes de notes, nombres pairs & impairs</title>
+
 </head>
 
 <body>
